Fix small styling issue in dark mode + spacing in readme

--- a/styles/main.css
+++ b/styles/main.css
@@ -775,7 +775,6 @@
     background: rgb(85, 85, 85);
     border: 1px solid black;
     height: 25px;
-    line-height: 10px;
 }
 
 .afmbe-jesuisfrog.sheet.actor.dark-mode input,
